// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QRCodeScaner Snapshot with tableNumber 1`] = `
<div>
  <Typography
    color="primary"
  >
    Table number:
  </Typography>
  <Button
    className="tableNumber"
    color="primary"
    onClick={[Function]}
  >
    1
  </Button>
  <QRScanerDialog
    isOpen={false}
    onClose={[Function]}
  />
</div>
`;

exports[`QRCodeScaner Snapshot without tableNumber 1`] = `
<div>
  <Button
    onClick={[Function]}
  >
    <PhotoCamera
      color="primary"
    />
  </Button>
  <Typography
    color="primary"
  >
    Scan Table QR
  </Typography>
  <QRScanerDialog
    isOpen={false}
    onClose={[Function]}
  />
</div>
`;
